; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxinternal.c_MuxImageDeleteNth.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_muxinternal.c_MuxImageDeleteNth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WEBP_MUX_NOT_FOUND = common dso_local global i32 0, align 4
@WEBP_MUX_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MuxImageDeleteNth(i32** %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32**, i32*** %4, align 8
  %7 = call i32 @assert(i32** %6)
  %8 = load i32**, i32*** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @SearchImageToGetOrDelete(i32** %8, i32 %9, i32*** %4)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @WEBP_MUX_NOT_FOUND, align 4
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = call i32* @MuxImageDelete(i32* %16)
  %18 = load i32**, i32*** %4, align 8
  store i32* %17, i32** %18, align 8
  %19 = load i32, i32* @WEBP_MUX_OK, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %14, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @SearchImageToGetOrDelete(i32**, i32, i32***) #1

declare dso_local i32* @MuxImageDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
